# PictureView

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PictureView.pro  README.md  RELEASE_NOTES_DRAFT.md  SECURITY.md  canvasoverlay.cpp  canvasoverlay.h  configmanager.cpp  configmanager.h  copilot_application.md  imagewidget.h  imagewidget_canvas.cpp  imagewidget_config.cpp  imagewidget_core.cpp  imagewidget_fileops.cpp  imagewidget_help.cpp  imagewidget_keyboard.cpp  imagewidget_menu.cpp  imagewidget_mouse.cpp  imagewidget_shortcuts.cpp  imagewidget_view.cpp  main.cpp  platform_compat.h  thumbnailwidget.cpp
.github/workflows/: Qt_Test_Build.yml
src/: archivehandler.cpp  archivehandler.h  canvascontrolpanel.cpp  canvascontrolpanel.h  canvasoverlay.cpp  canvasoverlay.h  configmanager.cpp  configmanager.h  imagewidget.cpp  imagewidget.h  imagewidget_archive.cpp  imagewidget_canvas.cpp  imagewidget_config.cpp  imagewidget_core.cpp  imagewidget_file.cpp  imagewidget_fileops.cpp  imagewidget_help.cpp  imagewidget_keyboard.cpp  imagewidget_menu.cpp  imagewidget_mouse.cpp  imagewidget_shortcuts.cpp  imagewidget_slideshow.cpp  imagewidget_transform.cpp  imagewidget_view.cpp  imagewidget_viewmode.cpp  main.cpp  thumbnailwidget.cpp  thumbnailwidget.h
translations/: PictureView_ar_SA.ts  PictureView_de_AT.ts  PictureView_en_CA.ts  PictureView_en_US.qm  PictureView_en_US.ts  PictureView_es_AR.ts  PictureView_fr_CA.ts  PictureView_fr_FR.ts  PictureView_hi_IN.ts  PictureView_id_ID.ts  PictureView_it_IT.ts  PictureView_ja_JP.ts  PictureView_ko_KR.ts  PictureView_nl_NL.ts  PictureView_pl_PL.ts  PictureView_pt_BR.ts  PictureView_pt_PT.ts  PictureView_ru_RU.ts  PictureView_th_TH.ts  PictureView_tr_TR.ts  PictureView_vi_VN.ts  PictureView_zh_CN.qm  PictureView_zh_CN.ts  PictureView_zh_TW.ts
